--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ header h1 {
 }
 body { 
     
-    font-family:Tahoma, sans-serif;
+    font-family: 'Bebas Neue', cursive;
     font-size: 16px;
     color:white;
     background-color: rgba(0, 0, 0, 0.913);
@@ -81,6 +81,10 @@ button:hover {
 
 }
 
+.card0:hover, .card1:hover, .card2:hover, .card3:hover, .card4:hover{
+    box-shadow:0px 0px 10px;
+
+}
 /* MAIN STYLING */
     /* First Prompt */
 #heroButton { 
