--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,12 +10,13 @@
     padding:3px;
     margin: 0;
     box-sizing: border-box;
-   
 }
 
 header {
     padding: 20px;
     background-color: #E50914;
+    display: flex;
+    justify-content: space-around;
 }
 
 header h1 {
@@ -23,8 +24,8 @@ header h1 {
     font-size: 48px;
     font-weight: 800;
     color: #ffffff;
-
 }
+
 body { 
     
     font-family: 'Bebas Neue', cursive;
