--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,22 +13,25 @@
    
 }
 
-main { 
-    display: flex; 
-    flex-direction: column;
+.transition-el { 
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0; 
+    left: 0; 
+    z-index: 101;
+    background-color: black;
+    opacity: 0;
+    pointer-events:none;
+    transition: 3s ease-out;
 }
 
-.welcome-banner { 
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.transition-el.is-active { 
+    opacity: 1;
+    pointer-events: all;
 }
 
-.web-app { 
-    height: 100vh;
-    display: flex;
-}
+
 
 header {
     padding: 20px;
