--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,3 +130,14 @@ audio,
 #hero1 {
     padding: 100px 96px 100px 96px;
 }
+
+.saveForLater {
+    margin: 20px 0 0 0;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.buttons {
+    justify-content: center;
+}
