change time of fade

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,6 +64,24 @@ button:hover {
 
 /* MAIN STYLING */
 
+.transition-el { 
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0; 
+    left: 0; 
+    z-index: 101;
+    background-color: black;
+    opacity: 0;
+    pointer-events:none;
+    transition: 2s ease-out;
+}
+
+.transition-el.is-active { 
+    opacity: 1;
+    pointer-events: all;
+}
+
 audio, 
 .toggle { 
     display: none;
