--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,11 +49,13 @@ a {
 }
 
 button { 
-    justify-content: center;
-    background: rgb(183, 183, 183);
-    border-radius: 7px;
     width: 30%;
     height: 3rem;
+    background: rgb(255, 255, 255);
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-align: center;
+    border-radius: 7px;
 }
 
 a:hover, 
