--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,10 @@ a {
 
 button { 
     width: 30%;
-    height: 3rem;
+    height: fit-content;
+    padding: 10px;
     background: rgb(255, 255, 255);
+    text-align: center;
     font-size: 1.5rem;
     font-weight: 400;
     text-align: center;
@@ -60,9 +62,11 @@ button {
 
 a:hover, 
 button:hover { 
+    background-color: #E50914;
+    color: white;
+    font-weight: 500;
     cursor: pointer;
     box-shadow: 0px 0px 8px;
-
 }
 
 
@@ -102,6 +106,14 @@ audio,
 /* .fitToSize{
     width:fit-content;
 } */
+
+.hero { 
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 #hero1{
     display:flex;
