--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,11 +53,12 @@ button {
     height: fit-content;
     padding: 10px;
     background: rgb(255, 255, 255);
-    text-align: center;
     font-size: 1.5rem;
     font-weight: 400;
     text-align: center;
     border-radius: 7px;
+    display: flex;
+    justify-content: center;
 }
 
 a:hover, 
