--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,9 +21,9 @@ header {
 }
 
 header h1 {
-    font-size: 2.5rem;
-    font-weight: 600;
-    color: var(--light);
+    font-size: 1.8rem;
+    font-weight: 400;
+    color: var(--red);
 }
 
 body { 
