--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -134,3 +134,11 @@ audio,
 #hero1 {
     padding: 100px 96px 100px 96px;
 }
+
+div > h2 { 
+    margin: 30px 0 30px 20px; 
+}
+
+.optionRow { 
+    margin-top: 30px;
+}
