--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,9 +110,6 @@ audio,
    
 }
 
-.tile-box { 
-}
-
 .tile.is-parent { 
     transition: transform .2s;
 } 
@@ -145,8 +142,8 @@ div > h2 {
     margin: 30px 0 30px 20px; 
 }
 
-.optionRow { 
+.tile-box { 
     margin-top: 30px;
     padding: 20px;
-    height: 400px;
+    height: fit-content;
 }
