combined 2 hero1 rules into a single rule

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -20,6 +20,7 @@ header {
     /* justify-content: space-around; */
 }
 
+/* Project title */
 header h1 {
     font-size: 1.8rem;
     font-weight: 400;
@@ -35,7 +36,7 @@ body {
     background: linear-gradient(180deg, rgb(20, 20, 20) 0%, rgba(32,32,32,1) 30%, rgb(64, 64, 64) 100%);}
 
 
-/* Project title and  */
+/* Project title and tile titles have Netflix font */
 h1, article>p { 
     font-family: 'Bebas Neue', cursive;
 }
@@ -104,10 +105,10 @@ audio,
 } */
 
 #hero1{
+    padding: 100px 96px 100px 96px;
     display:flex;
     justify-content: space-around;
     justify-content: center;
-   
 }
 
 /* On hover enlarge tile */
@@ -134,10 +135,6 @@ audio,
     width: 300px;
     font-size: 18px;
     text-align: center;
-}
-
-#hero1 {
-    padding: 100px 96px 100px 96px;
 }
 
 div > h2 { 
