Fixed overall styling

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,6 +25,7 @@ header h1 {
     font-size: 1.8rem;
     font-weight: 400;
     color: var(--red);
+    letter-spacing: 8px;
 }
 
 body { 
@@ -122,41 +123,30 @@ audio,
 }
 
 #hero1{
-    /* padding: 100px 96px 100px 96px; */
     display:flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-#hero1{
-    display:flex;
-    justify-content: space-around;
     justify-content: center;
+    align-items: flex-start;
     column-gap: 20px;
     width: 100%;
     height: 50%;
-    padding: 100px 96px 100px 96px;
-    
+    padding: 50px 46px;  
 }
 
-.hero-body > div {
+.movieDiv, .drinkDiv {
     width: 50%;
     text-align: center;
 }
-.hero-body img {
+
+#hero1 img {
     width: 48%;
     height: 475px;
 }
-.tile-box { 
-    padding: 20px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: space-around;
+
+.movieDivDescription {
+    margin: 0 auto;
+    margin-top: 20px;
+    width:50%;
 }
-
-
 
 /* On hover enlarge tile */
 .tile.is-parent { 
@@ -165,6 +155,7 @@ audio,
 
 .tile.is-parent:hover { 
     transform: scale(1.1);
+    cursor: pointer;
 }
 /* end of feature */
 
@@ -187,13 +178,20 @@ audio,
 }
 
 div > h2 { 
-    margin: 30px 0 30px 20px; 
+    margin: 20px 0 0 20px;
 }
 
 .tile-box { 
     margin-top: 30px;
     padding: 20px;
     height: fit-content;
+}
+.title {
+word-break: break-word;
+}
+.movieDivTitle, 
+.drinkDivTitle { 
+   margin-bottom: 20px;
 }
 
 /* .movieDiv, 
