--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,14 +1,14 @@
 /* VARIABLES */
-:root{ 
-    --red: #E50914; 
-    --dark: rgb(16, 16, 16);  
-    --light: #fff; 
+:root {
+    --red: #E50914;
+    --dark: rgb(16, 16, 16);
+    --light: #fff;
 }
 
 
 /* GENERAL BODY AND TYPOGRAPHY */
 * {
-    padding:3px;
+    padding: 3px;
     margin: 0;
     box-sizing: border-box;
 }
@@ -26,33 +26,35 @@ header h1 {
     letter-spacing: 8px;
 }
 
-body { 
-    
+body {
+
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 16px;
-    color:var(--light);
-    background: rgb(0,0,0);
-    background: linear-gradient(180deg, rgb(20, 20, 20) 0%, rgba(32,32,32,1) 30%, rgb(64, 64, 64) 100%);}
+    color: var(--light);
+    background: rgb(0, 0, 0);
+    background: linear-gradient(180deg, rgb(20, 20, 20) 0%, rgba(32, 32, 32, 1) 30%, rgb(64, 64, 64) 100%);
+}
 
 
 /* Project title and tile titles have Netflix font */
-h1, article>p { 
+h1,
+article>p {
     font-family: 'Bebas Neue', cursive;
 }
 
-h2 { 
+h2 {
     font-size: 1.5rem;
 }
 
-p { 
+p {
     line-height: 1.5rem;
 }
 
-a { 
+a {
     text-decoration: none;
 }
 
-button { 
+button {
     width: 30%;
     height: fit-content;
     padding: 10px;
@@ -65,8 +67,8 @@ button {
     justify-content: center;
 }
 
-a:hover, 
-button:hover { 
+a:hover,
+button:hover {
     background-color: #E50914;
     color: white;
     font-weight: 500;
@@ -77,25 +79,25 @@ button:hover {
 
 /* MAIN STYLING */
 
-.transition-el { 
+.transition-el {
     position: fixed;
     top: 0;
     right: 0;
-    bottom: 0; 
-    left: 0; 
+    bottom: 0;
+    left: 0;
     z-index: 101;
     background-color: black;
     opacity: 0;
-    pointer-events:none;
+    pointer-events: none;
     transition: 2s ease-out;
 }
 
-.transition-el.is-active { 
+.transition-el.is-active {
     opacity: 1;
     pointer-events: all;
 }
 
-div.transition-el { 
+div.transition-el {
     font-size: 4rem;
     color: #E50914;
     display: flex;
@@ -103,29 +105,30 @@ div.transition-el {
     align-items: center;
 }
 
-audio, 
-.toggle { 
+audio,
+.toggle {
     display: none;
 }
 
-.hero { 
+.hero {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#hero1{
-    display:flex;
+#hero1 {
+    display: flex;
     justify-content: center;
     align-items: flex-start;
     column-gap: 20px;
     width: 100%;
     height: 50%;
-    padding: 50px 46px;  
+    padding: 50px 46px;
 }
 
-.movieDiv, .drinkDiv {
+.movieDiv,
+.drinkDiv {
     width: 50%;
     text-align: center;
 }
@@ -138,18 +141,19 @@ audio,
 .movieDivDescription {
     margin: 0 auto;
     margin-top: 20px;
-    width:50%;
+    width: 50%;
 }
 
 /* On hover enlarge tile */
-.tile.is-parent { 
+.tile.is-parent {
     transition: transform .2s;
-} 
+}
 
-.tile.is-parent:hover { 
+.tile.is-parent:hover {
     transform: scale(1.1);
     cursor: pointer;
 }
+
 /* end of feature */
 
 .displayedDrink {
@@ -170,19 +174,21 @@ audio,
     margin-top: 20px;
 }
 
-div > h2 { 
+div>h2 {
     margin: 20px 0 0 20px;
 }
 
-.tile-box { 
+.tile-box {
     margin-top: 30px;
     padding: 20px;
     height: fit-content;
 }
+
 .title {
-word-break: break-word;
+    word-break: break-word;
 }
-.movieDivTitle, 
-.drinkDivTitle { 
-   margin-bottom: 20px;
+
+.movieDivTitle,
+.drinkDivTitle {
+    margin-bottom: 20px;
 }
